align fix

--- a/compile/css/main.styl
+++ b/compile/css/main.styl
@@ -1,5 +1,5 @@
 #main-header
-  text-align right
+  text-align center
   padding 10px
 
 #mobile-panel
